--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -82,6 +82,7 @@
       "existingpseudo": "Already existing pseudo",
       "missinglogin": "missing email",
       "invalidlogin": "invalid email",
+      "existinglogin": "An account already exists with this login",
       "missingpassword": "missing password",
       "missingrepeatpassword": "missing repeated password",
       "passwordmissmatch": "password missmatch"
