--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -178,6 +178,7 @@
       "stats": "Stats",
       "history": "History",
       "score": "score",
+      "averagepoints" : "av. points",
       "games": "games",
       "victory": "victory",
       "attack": "attack",
