--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -193,7 +193,9 @@
       "nousersdeleteexplanation": "You have removed all players from the table.\n\nSaving a table without any player will delete the table."
     },
     "input": {
-      "guests": "Guests"},
+      "guests": "Guests",
+      "data": "Data"
+    },
     "button": {
       "newgame": "New game"
     },
