--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -164,7 +164,12 @@
       "mystats": "My stats",
       "mytables": "My tables",
       "notables": "No tables so far...",
-      "notablesexplanation": "You are not playing at any table so far...\n\nCreate a new table with using the \"+\" icon and invite your friends to play!"
+      "notablesexplanation": "You are not playing at any table so far...\n\nCreate a new table with using the \"+\" icon and invite your friends to play!",
+      "attack": "Attack",
+      "victory": "Victory",
+      "games": "games",
+      "nogames": "No games so far...",
+      "nogamesstatsexplanation": "You haven't played any game so far?\n\nPlay and save games to access to your stats here!"
     },
     "input": {},
     "button": {},
