--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -184,6 +184,7 @@
       "history": "History",
       "score": "score",
       "averagepoints" : "av. points",
+      "data": "Data",
       "games": "games",
       "victory": "victory",
       "attack": "attack",
