--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -203,7 +203,8 @@
       "data": "Data"
     },
     "button": {
-      "newgame": "New game"
+      "newgame": "New game",
+      "loadmore": "Load more"
     },
     "error": {
       "missingname": "missing name",
