--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -302,5 +302,27 @@
       "saved": "Game saved!",
       "deleted": "Game deleted"
     }
+  },
+  "feedback":{
+    "label": {
+      "tocome": "To come...",
+      "tocomeintro": "This functionality is not available yet.",
+      "tocomedetails": "We are delighted by your interest and propose to record it for the team to prioritize for this! \n This is anonymous ;)",
+      "leavemessage": "Leave us a message!"
+    },
+    "input":{
+      "message": "Message",
+      "consent": "I accept the use of this feedback to improve the product"
+    },
+    "button": {
+      "send": "Send"
+    },
+    "error":{
+      "missingmessage": "missing message",
+      "missingconsent": "missing consent"
+    },
+    "snack":{      
+      "created" : "Feedback sent!"
+    }
   }
 }
