--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -2,14 +2,12 @@
   "generic": {
     "label": {
       "product": "CoWhist19",
-      "account": "Account",
       "documentation": "Documentation",
       "about": "About"
     },
     "menu": {
       "home": "Home",
       "account": "My account",
-      "table": "Table",
       "documentation": "Documentation",
       "about": "About",
       "contact": "Contact",
@@ -23,15 +21,9 @@
     },
     "button": {
       "signin": "Sign in",
-      "add": "Add",
       "save": "Save",
-      "delete": "Delete",
-      "select": "Select",
-      "confirm": "Confirm",
       "cancel": "Cancel",
       "close": "Close",
-      "view": "View",
-      "edit": "Edit",
       "proceed": "Proceed",
       "tohome": "To home"
     },
@@ -48,26 +40,17 @@
       "error": {
         "unknown": "Unknown error :/",
         "withdetails": "Error :",
-        "invalidchange": "invalid change",
-        "wip": "We are working on it...",
-        "existingpseudo" : "Already existing pseudo"
-      },
-      "feedback": {
-        "wip": "Work in progress...",
-        "languagechange": "Refresh the page to enjoy this language..."
+        "wip": "We are working on it..."
       }
     },
     "language": {
       "enGB": {
-        "short": "EN",
         "long": "English"
       },
       "frFR": {
-        "short": "FR",
         "long": "French"
       },
       "nlNL": {
-        "short": "NL",
         "long": "Dutch"
       }
     }
@@ -104,22 +87,15 @@
       "gotosignup": "Sign up now!",
       "resendactivationemail": "Resend activation email"
     },
-    "error": {
-      "emptytoken": "empty token",
-      "invalidtoken": "invalid token",
-      "invalidstatus": "invalid status"
-    },
     "snack": {
       "signedin": "Signed in!",
       "unauthorized": "Wrong password",
-      "notfound": "Account not found",
       "successresendingactivation": "Activation email sent, check your emails (including the spams)",
       "errorresendingactivation": "Could not resend account activation email"
     }
   },
   "activation": {
     "label": {
-      "title": "Account activation",
       "laststep": "One last step...\nand then you're all set!",
       "inprogress": "Activation in progress...",
       "error": "Error during activation",
@@ -136,7 +112,6 @@
   },
   "account": {
     "label": {
-      "title": "My account",
       "mydata": "My data",
       "mypseudo": "My pseudo",
       "myemail": "My email",
@@ -188,7 +163,6 @@
       "players": "Players",
       "stats": "Stats",
       "history": "History",
-      "score": "score",
       "averagepoints" : "av. points",
       "data": "Data",
       "games": "games",
@@ -205,8 +179,7 @@
       "nousersdeleteexplanation": "You have removed all players from the table.\n\nSaving a table without any player will delete the table."
     },
     "input": {
-      "guests": "Guests",
-      "data": "Data"
+      "guests": "Guests"
     },
     "button": {
       "newgame": "New game",
@@ -220,17 +193,9 @@
       "creationwithoutuser": "table creation impossible without you among the players"
     },
     "confirm": {
-      "delete": {
-        "title": "Sure to delete table?",
-        "content": "You're about to delete the table.\n\nThis will delete the table and all associated games."
-      },
       "deletenoeusers": {
         "title": "No more player here!",
         "content": "All players have been deleted from this table.\nA table can't exist without any player...\n\nProceeding will delete the table and all associated games."
-      },
-      "deleteuser": {
-        "title": "Sure to remove this player?",
-        "content": "You're about to remove a player from the table.\n\nIf you proceed and save the table, the player won't have access anymore to this table, the player name will be removed from the table history and statistics."
       }
     },
     "snack": {
@@ -287,7 +252,6 @@
     },
     "input": {
       "contract": "Contract",
-      "date": "Date",
       "attack": "Attack",
       "defense": "Defense",
       "outcome": "Outcome"
