--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -1,18 +1,16 @@
 {
   "generic": {
     "label": {
-      "product": "CoWhist 19",
-      "account": "Account",
-      "help": "Help",
-      "tocome": "To come...",
-      "tocomeintro": "This functionality is not available yet.",
-      "tocomedetails": "We are delighted by your interest and propose to record it for the team to prioritize for this! \n This is anonymous ;)"
+      "product": "CoWhist19",
+      "documentation": "Documentation",
+      "about": "About"
     },
     "menu": {
       "home": "Home",
       "account": "My account",
-      "table": "Table",
-      "help": "Help",
+      "documentation": "Documentation",
+      "about": "About",
+      "contact": "Contact",
       "signout": "Sign out"
     },
     "input": {
@@ -22,18 +20,17 @@
       "password": "Password"
     },
     "button": {
-      "add": "Add",
+      "signin": "Sign in",
       "save": "Save",
-      "delete": "Delete",
-      "select": "Select",
-      "confirm": "Confirm",
       "cancel": "Cancel",
       "close": "Close",
-      "view": "View",
-      "edit": "Edit",
       "proceed": "Proceed",
-      "tocome": "To come...",
       "tohome": "To home"
+    },
+    "error": {
+      "missinglogin": "missing email",
+      "invalidlogin": "invalid email",
+      "missingpassword": "missing password"
     },
     "snack": {
       "api": {
@@ -43,92 +40,81 @@
       "error": {
         "unknown": "Unknown error :/",
         "withdetails": "Error :",
-        "invalidchange": "invalid change",
         "wip": "We are working on it..."
-      },
-      "feedback": {
-        "wip": "Work in progress...",
-        "languagechange": "Refresh the page to enjoy this language..."
       }
     },
     "language": {
       "enGB": {
-        "short": "EN",
         "long": "English"
       },
       "frFR": {
-        "short": "FR",
         "long": "French"
       },
       "nlNL": {
-        "short": "NL",
         "long": "Dutch"
       }
     }
   },
   "signup": {
     "label": {
-      "title": "Sign up"
+      "title": "Sign up",
+      "existinglogin": "Don't you already created an account with this login?"
     },
-    "input": { "repeatpassword": "Repeat password" },
+    "input": { "passwordrepeat": "Repeat password" },
     "button": {
       "signup": "Sign up"
     },
     "error": {
       "missingpseudo": "missing pseudo",
-      "missinglogin": "missing email",
-      "invalidlogin": "invalid email",
-      "missingpassword": "missing password",
-      "missingrepeatpassword": "missing repeated password",
-      "passwordmissmatch": "password missmatch"
+      "existingpseudo": "Already existing pseudo",
+      "existinglogin": "An account already exists with this login",
+      "missingpasswordrepeat": "missing repeated password",
+      "passwordmissmatch": "password missmatch",
+      "resetpassword": "Reset my password (unavailable)"
     },
     "snack": {
-      "signedup": "Signed up!"
+      "signedup": "Signed up!\nCheck your emails to activate your account (including the spams)"
     }
   },
   "signin": {
     "label": {
-      "title": "Sign in"
+      "title": "Sign in",
+      "notfoundaccount": "Account not found :/\nWilling to create an account?",
+      "inactiveaccount": "Haven't you activated your account yet?",
+      "successresendingactivation": "Activation email sent, check your emails (including the spams)",
+      "successsendingpassword": "Password reset email sent, check your emails (including the spams)",
+      "errorresendingactivation": "Could not send account activation email"
     },
     "input": {},
     "button": {
-      "signin": "Sign in"
-    },
-    "error": {
-      "emptytoken": "empty token",
-      "invalidtoken": "invalid token",
-      "invalidstatus": "invalid status",
-      "missinglogin": "missing email",
-      "invalidlogin": "invalid email",
-      "missingpassword": "missing password"
+      "resetpassword": "Reset password",
+      "gotosignup": "Sign up now!",
+      "resendactivationemail": "Resend activation email"
     },
     "snack": {
       "signedin": "Signed in!",
-      "unauthorized": "Wrong password",
-      "notfound": "Account not found"
+      "unauthorized": "Wrong password",   
+      "errorsendingpassword": "Could not send password reset email"
     }
   },
   "activation": {
     "label": {
-      "title": "Account activation",
-      "inprogress": "Account activation in progress",
+      "laststep": "One last step...\nand then you're all set!",
+      "inprogress": "Activation in progress...",
       "error": "Error during activation",
-      "errorexplanation": "Sincere apologies for the inconvenience.\n\nPlease try again later.",
-      "activatedtitle": "Account activated!",
-      "activatedaccountexplanations": "Your account has been successfully activated.\n\nYou can now sign in!",
-      "notfoundaccount": "Account activation impossible",
-      "notfoundaccountexplanations": "It seems the token from the url is not valid.\n\nYou may have already activated this account?"
+      "errorexplanation": "Sincere apologies for the inconvenience.\nPlease try again later.",
+      "activatedtitle": "Account activated!"
     },
     "input": {},
     "button": {
-      "tohome": "To home to sign in"
+      "activate": "Activate",
+      "resend": "Send a new activation email"
     },
     "error": {},
     "snack": {}
   },
   "account": {
     "label": {
-      "title": "My account",
       "mydata": "My data",
       "mypseudo": "My pseudo",
       "myemail": "My email",
@@ -155,10 +141,19 @@
   },
   "home": {
     "label": {
+      "valueprop": "Play cards, store games...\nGet history and analytics!",
+      "carousel1": "Record your Whist games,\naccess history and analytics",
+      "carousel2": "Create as many table you want\nand invite your friends",
+      "carousel3": "Sign up!\nIt's free and easy",
       "mystats": "My stats",
       "mytables": "My tables",
       "notables": "No tables so far...",
-      "notablesexplanation": "You are not playing at any table so far...\n\nCreate a new table with using the \"+\" icon and invite your friends to play!"
+      "notablesexplanation": "You are not playing at any table so far...\n\nCreate a new table with using the \"+\" icon and invite your friends to play!",
+      "attack": "Attack",
+      "victory": "Victory",
+      "games": "games",
+      "nogames": "No games so far...",
+      "nogamesstatsexplanation": "You haven't played any game so far?\n\nPlay and save games to access to your stats here!"
     },
     "input": {},
     "button": {},
@@ -171,7 +166,8 @@
       "players": "Players",
       "stats": "Stats",
       "history": "History",
-      "score": "score",
+      "averagepoints" : "av. points",
+      "data": "Data",
       "games": "games",
       "victory": "victory",
       "attack": "attack",
@@ -185,27 +181,24 @@
       "nousersdelete": "No players, really?",
       "nousersdeleteexplanation": "You have removed all players from the table.\n\nSaving a table without any player will delete the table."
     },
-    "input": {},
+    "input": {
+      "guests": "Guests"
+    },
     "button": {
-      "newgame": "New game"
+      "newgame": "New game",
+      "loadmore": "Load more"
     },
     "error": {
       "missingname": "missing name",
+      "existingname" : "Already existing name",
+      "missingguests": "missing guests",
       "creationwithoutplayers": "missing players to create a table",
       "creationwithoutuser": "table creation impossible without you among the players"
     },
     "confirm": {
-      "delete": {
-        "title": "Sure to delete table?",
-        "content": "You're about to delete the table.\n\nThis will delete the table and all associated games."
-      },
       "deletenoeusers": {
         "title": "No more player here!",
         "content": "All players have been deleted from this table.\nA table can't exist without any player...\n\nProceeding will delete the table and all associated games."
-      },
-      "deleteuser": {
-        "title": "Sure to remove this player?",
-        "content": "You're about to remove a player from the table.\n\nIf you proceed and save the table, the player won't have access anymore to this table, the player name will be removed from the table history and statistics."
       }
     },
     "snack": {
@@ -239,6 +232,8 @@
       "won": "won in",
       "lost": "lost in",
       "against": "against",
+      "guest" : "a guest", 
+      "removeduser" : "a removed user",
       "contract": {
         "8plis": "Coop. 8 folds",
         "9plis": "Coop. 9 folds",
@@ -251,6 +246,7 @@
         "solo8": "Solo 8 folds",
         "petitemisere": "Small misery",
         "grandemisere": "Large misery",
+        "grandemisereetalee": "Open large misery",
         "trou8": "Hole in 8 folds",
         "trou9": "Hole in 9 folds",
         "petitchelem": "Small Slam",
@@ -259,7 +255,6 @@
     },
     "input": {
       "contract": "Contract",
-      "date": "Date",
       "attack": "Attack",
       "defense": "Defense",
       "outcome": "Outcome"
@@ -279,6 +274,49 @@
     "snack": {
       "saved": "Game saved!",
       "deleted": "Game deleted"
+    }
+  },
+  "feedback":{
+    "label": {
+      "tocome": "To come...",
+      "tocomeintro": "This functionality is not available yet.",
+      "tocomedetails": "We are delighted by your interest and propose to record it for the team to prioritize for this! \n This is anonymous ;)",
+      "addmessage": "You can add message to make your point",
+      "contact": "Contact",
+      "leavemessage": "Leave us a message!"
+    },
+    "input":{
+      "message": "Message",
+      "consent": "I accept the use of this feedback to improve the product"
+    },
+    "button": {
+      "send": "Send"
+    },
+    "error":{
+      "missingmessage": "missing message",
+      "missingconsent": "missing consent"
+    },
+    "snack":{      
+      "created" : "Feedback sent!"
+    }
+  },
+  "changepassword": {
+    "label": {
+      "modaltitle": "Change password"
+    },
+    "input":{
+      "current" : "Current password",
+      "new": "New password",
+      "repeat": "Repeat new password"
+    },
+    "error": {
+      "missingcurrent": "missing current password",
+      "missingnew": "missing new password",
+      "missingrepeat": "missing repeated password",
+      "missmatch": "password missmatch"
+    },
+    "snack": {
+      "saved" : "Password saved"
     }
   }
 }
