--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -2,13 +2,13 @@
   "generic": {
     "label": {
       "product": "CoWhist19",
-      "documentation": "Documentation",
+      "help": "Help",
       "about": "About"
     },
     "menu": {
       "home": "Home",
       "account": "My account",
-      "documentation": "Documentation",
+      "help": "Help",
       "about": "About",
       "contact": "Contact",
       "signout": "Sign out"
