--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -169,11 +169,16 @@
             "players": "Players",
             "stats": "Stats",
             "history": "History",
-            "averagepoints": "av. points",
             "data": "Data",
             "games": "games",
             "victory": "victory",
             "attack": "attack",
+            "averagepoints": "Average points",
+            "ratevictory": "Victoiry rate",
+            "rateattack": "Attack rate",
+            "gamenumber": "Number of games",
+            "period": "Period",
+            "sliding": "Sliding",
             "deniedaccess": "Denied access",
             "deniedaccessexplanation": "You're not a member of this table.\n\nYou can't access a table you're not a memebr of.",
             "nogames": "No games so far...",
